<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <!--nume curs-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/d_nume"
            android:hint="@string/text_detail_cours_name"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_detail"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <!--prof-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:hint="@string/text_detail_prof"
            android:layout_width="match_parent"
            android:id="@+id/d_prof"
            android:imeOptions="actionNext"
            android:textAlignment="center"
            android:maxLines="1"
            android:minLines="1"
            android:inputType="text"

            android:textSize="@dimen/text_size_detail"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <!--start-finish-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
        <EditText
            android:hint="@string/text_detail_start"
            android:layout_width="0dp"
            android:id="@+id/d_start"
            android:maxLines="1"
            android:minLines="1"
            android:inputType="datetime"

            android:imeOptions="actionNext"
            android:textSize="@dimen/text_size_detail"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <EditText
            android:hint="@string/text_detail_finish"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:imeOptions="actionNext"
            android:id="@+id/d_finish"
            android:layout_weight="1"
            android:maxLines="1"
            android:minLines="1"
            android:inputType="datetime"

            android:textSize="@dimen/text_size_detail"
            android:layout_height="match_parent" />
</LinearLayout>
    </RelativeLayout>

    <!--id-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <EditText
                android:hint="@string/text_detail_tip_curs"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                android:id="@+id/d_tip"
                android:layout_weight="1"
                android:maxLines="1"
                android:minLines="1"
                android:inputType="text"

                android:textSize="@dimen/text_size_detail"
                android:layout_height="match_parent" />
            <EditText
                android:hint="@string/text_detail_id_curs"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:id="@+id/d_id"
                android:maxLines="1"
                android:minLines="1"
                android:inputType="text"

                android:imeOptions="actionNext"
                android:textSize="@dimen/text_size_detail"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>
    <!--notite-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:hint="@string/text_detail_notite"
            android:layout_width="match_parent"
            android:id="@+id/d_notite"
            android:maxLines="1"
            android:minLines="1"
            android:visibility="visible"
            android:inputType="text"

            android:textAlignment="center"
            android:imeOptions="actionDone"
            android:textSize="@dimen/text_size_detail"
            android:layout_height="match_parent" />

    </RelativeLayout>

</LinearLayout>