<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="10">
    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
    <EditText
        android:id="@+id/edit_ulogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textAlignment="center"
        android:imeOptions="actionNext"
        android:hint="@string/text_insert_user"
        android:layout_weight="2"/>
    <EditText
        android:id="@+id/edit_plogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:hint="@string/text_insert_pass"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="7"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/btn_reg"
            android:layout_weight="2"
            android:layout_marginBottom="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/btn_login"
            android:layout_weight="2"
            android:layout_marginBottom="5dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>