<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">


    <!--Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <!--selector saptamana-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/weeks_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/text_date_picker"
                android:textAlignment="gravity"
                android:textSize="@dimen/name_title" />

            <Button
                android:id="@+id/btn_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clicky Clicky" />

        </LinearLayout>

        <!--Ziua saptamanii-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/day_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/text_grupa_select"
                android:textAlignment="gravity"
                android:textSize="@dimen/name_title" />

            <Spinner
                android:id="@+id/spinner_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:tooltipText="Selecteaz grupa"></Spinner>

        </LinearLayout>

    </LinearLayout>


    <!--list view -->
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"></ListView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_btn_add"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


</LinearLayout>